# best-practice-bazel-python

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  a.py  requirements.txt  requirements_lock.txt
bpy/: BUILD.bazel  a.py  b.bzl  b.py
