module(
    name = "ajax",
    version = "0.0.1",  # keep Ajax version consistent with pyproject.toml.
)

# Core Python support for Bazel
bazel_dep(name = "rules_python", version = "1.5.1")

# Common Bazel utilities (for implementing golden_config.bzl)
bazel_dep(name = "bazel_skylib", version = "1.8.1")

# Python toolchain setup
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.10") # Same version as pyproject.toml.

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(hub_name = "pip", python_version = "3.10", requirements_lock = "//:requirements_lock.txt")
use_repo(pip, "pip")